feat: add validaton on create expense
