# cmd/api/docs/swagger.json
@@ -22,7 +22,7 @@
                 "parameters": [
                     {
                         "description": "Expense to be created",
-                        "name": "create_expense",
+                        "name": "expense_to_create",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -32,13 +32,19 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Expense has been created",
                         "schema": {
                             "$ref": "#/definitions/entities.Expense"
                         }
                     },
+                    "400": {
+                        "description": "When a request does not fullfill need data",
+                        "schema": {
+                            "$ref": "#/definitions/validator.ValidationError"
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Something unidentified has occurred"
                     }
                 }
             }
@@ -242,7 +248,7 @@
         "controllers.HealthCheckOutput": {
             "type": "object",
             "properties": {
-                "no_sqldb_status": {
+                "db_status": {
                     "type": "string"
                 },
                 "version": {
@@ -263,7 +269,7 @@
                     "type": "integer"
                 },
                 "description": {
-                    "type": "string"
+                    "$ref": "#/definitions/null.String"
                 },
                 "id": {
                     "type": "string"
@@ -271,14 +277,17 @@
                 "is_paid": {
                     "type": "boolean"
                 },
-                "is_recurrent": {
-                    "type": "boolean"
-                },
                 "month": {
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
+                    "$ref": "#/definitions/null.String"
+                },
+                "recurrent_expense": {
+                    "$ref": "#/definitions/entities.RecurrentExpense"
+                },
+                "recurrent_expense_id": {
+                    "$ref": "#/definitions/uuid.NullUUID"
                 },
                 "updated_at": {
                     "type": "string"
@@ -288,8 +297,41 @@
                 }
             }
         },
+        "entities.RecurrentExpense": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "$ref": "#/definitions/null.String"
+                },
+                "expenses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Expense"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "expenses.CreateExpenseInput": {
             "type": "object",
+            "required": [
+                "amount",
+                "name"
+            ],
             "properties": {
                 "amount": {
                     "type": "number"
@@ -332,6 +374,18 @@
                 }
             }
         },
+        "null.String": {
+            "type": "object",
+            "properties": {
+                "string": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if String is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
         "recurrentexpenses.CreateRecurrentExpenseInput": {
             "type": "object",
             "properties": {
@@ -344,6 +398,24 @@
                 "name": {
                     "type": "string"
                 }
+            }
+        },
+        "uuid.NullUUID": {
+            "type": "object",
+            "properties": {
+                "uuid": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if UUID is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
+        "validator.ValidationError": {
+            "type": "object",
+            "properties": {
+                "errors": {}
             }
         }
     }
